--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,31 @@
 .App {
   text-align: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.card {
+  transform: translateY(-120px);
+  width: 70vw;
+  height: 100vh;
+  margin: 0 auto;
+}
+
+.title {
+  font-size: 50px;
+  font-weight: 700;
+  color: #fff;
+  margin-bottom: 1em;
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .App-logo {
